k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game
spec:
  replicas: 1   # pods 
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
      - name: frontend
        image: us-west1-docker.pkg.dev/cs144-25s-team24/cs144-groupproject/frontend:latest   #v1 is deterministic
        imagePullPolicy: Always
        ports:
        - containerPort: 4173  # port that container listens on
      - name: backend
        image: us-west1-docker.pkg.dev/cs144-25s-team24/cs144-groupproject/backend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
      - name: redis
        image: redis
        ports:
          - containerPort: 6379
