k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4173
  type: ClusterIP
