k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-app-service
spec:
  type: ClusterIP
  selector:
    app: game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4173
